table thead shadow added, had to use my super vision to even notice it in the mock. tables suck still 2017 something with padding and th not having content causing slight 5px layout issues. I think we should move to dl or ul with flexbox or table-cell like we have for the player cards(post launch).

--- a/static/src/sass/blocks/balance-summary.scss
+++ b/static/src/sass/blocks/balance-summary.scss
@@ -27,7 +27,7 @@ to deposit, withdraw
 
 .balance-summary {
   background: #252939;
-  margin: 42px 0;
+  margin: 0 0 42px;
   text-align: center;
   padding: 20px;
   max-width: 310px;
